manifests/spenn-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spenn
  namespace: spenn
  annotations:
    keel.sh/match-tag: 'true'
    keel.sh/policy: force
    keel.sh/trigger: poll
spec:
  replicas: 3
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: spenn
  template:
    metadata:
      labels:
        app: spenn
        logs.bakseter.net/scrape: 'false'
    spec:
      containers:
        - name: spenn
          image: ghcr.io/bakseter/spenn:latest
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - spenn
              topologyKey: bakseter.net/physical-node
      securityContext:
        fsGroup: 65534
        runAsNonRoot: true
        runAsGroup: 65534
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups:
          - 65534
