manifests/spenn-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spenn
  namespace: spenn
  labels:
    app: spenn
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: spenn
  type: ClusterIP
