manifests/database-networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: database
  namespace: spenn
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: spenn-database

  ingress:
    # Allow traffic from spenn
    - fromEndpoints:
        - matchLabels:
            app: spenn
      toPorts:
        - rules:
            http: []
          ports:
            - protocol: TCP
              port: '5432'

    # Allow ingress from CloudNativePG operator
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cloudnative-pg
            k8s:io.kubernetes.pod.namespace: cnpg-system
      toPorts:
        - rules:
            http: []
          ports:
            - port: '5432'
              protocol: TCP
            - port: '8000'
              protocol: TCP

    # Allow ingress from database replicas
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: spenn-database
      toPorts:
        - rules:
            http: []
          ports:
            - port: '5432'
              protocol: TCP
            - port: '8000'
              protocol: TCP

  egress:
    # Allow egress to kube-dns (needed for DNS resolution)
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - rules:
            http: []
          ports:
            - port: '53'
              protocol: TCP
            - port: '53'
              protocol: UDP

    # Allow egress to kube-apiserver (needed for getting Cluster CR (?))
    - toEntities:
        - kube-apiserver

    # Allow egress to database replicas
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: spenn-database
      toPorts:
        - rules:
            http: []
          ports:
            - port: '5432'
              protocol: TCP
            - port: '8000'
              protocol: TCP
